--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,83 +14,86 @@
             <form class="m-3">
                 <div class="m-3">
                     <label class="form-label">치즈</label>
-                    <input type="text" class="form-control" id="cheese-yesterday-pan" placeholder="전일 잔량을 입력하세요.">
+                    <input type="number" class="form-control" id="cheese-yesterday" placeholder="전일 잔량을 입력하세요." >
                 </div>
                 <div class="m-3">
                     <label class="form-label">시즌 1</label>
-                    <input type="text" class="form-control" id="season1-yesterday-box" placeholder="전일 잔량을 입력하세요.">
+                    <input type="number" class="form-control" id="season1-yesterday" placeholder="전일 잔량을 입력하세요.">
                 </div>
                 <div class="m-3">
                     <label class="form-label">시즌 2</label>
-                    <input type="text" class="form-control" id="season2-yesterday-box" placeholder="전일 잔량을 입력하세요.">
+                    <input type="number" class="form-control" id="season2-yesterday" placeholder="전일 잔량을 입력하세요.">
                 </div>
             </form>
             <h3 class="m-3">✔ 입고</h3>
             <form class="m-3">
                 <div class="m-3">
                     <label class="form-label">치즈</label>
-                    <input type="text" class="form-control" id="cheese-receiving-box" placeholder="박스 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="cheese-receiving-box" placeholder="박스 개수를 입력하세요.">
                 </div>
                 <div class="m-3">
                     <label class="form-label">시즌 1</label>
-                    <input type="text" class="form-control" id="season1-receiving-box" placeholder="박스 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="season1-receiving-box" placeholder="박스 개수를 입력하세요.">
                 </div>
                 <div class="m-3">
                     <label class="form-label">시즌 2</label>
-                    <input type="text" class="form-control" id="season2-receiving-box" placeholder="박스 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="season2-receiving-box" placeholder="박스 개수를 입력하세요.">
                 </div>
             </form>
             <h3 class="m-3">✔ 남은 재고</h3>
             <form class="m-3">
                 <div class="m-3">
                     <label class="form-label">치즈</label>
-                    <input type="text" class="form-control" id="cheese-left-box" placeholder="박스 개수를 입력하세요.">
-                    <input type="text" class="form-control" id="cheese-left-pan" placeholder="판 개수를 입력하세요.">
-                    <input type="text" class="form-control" id="cheese-left-piece" placeholder="낱개 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="cheese-left-box" placeholder="박스 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="cheese-left-pan" placeholder="판 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="cheese-left-piece" placeholder="낱개 개수를 입력하세요.">
                 </div>
                 <div class="m-3">
                     <label class="form-label">시즌 1</label>
-                    <input type="text" class="form-control" id="season1-left-box" placeholder="박스 개수를 입력하세요.">
-                    <input type="text" class="form-control" id="season1-left-pan" placeholder="판 개수를 입력하세요.">
-                    <input type="text" class="form-control" id="season1-left-piece" placeholder="낱개 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="season1-left-box" placeholder="박스 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="season1-left-pan" placeholder="판 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="season1-left-piece" placeholder="낱개 개수를 입력하세요.">
                 </div>
                 <div class="m-3">
                     <label class="form-label">시즌 2</label>
-                    <input type="text" class="form-control" id="season2-left-box" placeholder="박스 개수를 입력하세요.">
-                    <input type="text" class="form-control" id="season2-left-pan" placeholder="판 개수를 입력하세요.">
-                    <input type="text" class="form-control" id="season2-left-piece" placeholder="낱개 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="season2-left-box" placeholder="박스 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="season2-left-pan" placeholder="판 개수를 입력하세요.">
+                    <input type="number" class="form-control" id="season2-left-piece" placeholder="낱개 개수를 입력하세요.">
                 </div>
-                <button type="submit" class="btn btn-primary m-3">계산하기</button>
+                <button type="button" class="btn btn-primary m-3" id="calculate-btn" >계산하기</button>
+                <button type="button" class="btn btn-secondary m-3" id="reset-btn" >초기화</button>
             </form>
 
             <div class="m-3">
                 <div class="card border-primary mb-3" style="width: 18rem;">
                     <div class="card-header">입고</div>
-                    <div class="card-body text-primary">
-                        <p class="card-text">치즈 : <span></span></p>
-                        <p class="card-text">시즌1 : <span></span></p>
-                        <p class="card-text">시즌2: <span></span></p>
+                    <div class="card-body text-primary" id="receiving-result">
+                        <p class="card-text">치즈 : <span id="cheese-receiving-result"></span></p>
+                        <p class="card-text">시즌1 : <span id="season1-receiving-result"></span></p>
+                        <p class="card-text">시즌2: <span id="season2-receiving-result"></span></p>
                     </div>
                 </div>
                 <div class="card border-secondary mb-3" style="width: 18rem;">
                     <div class="card-header">당일생산</div>
                     <div class="card-body text-primary">
-                        <p class="card-text">치즈 : <span></span></p>
-                        <p class="card-text">시즌1 : <span></span></p>
-                        <p class="card-text">시즌2 : <span></span></p>
+                        <p class="card-text">치즈 : <span id="cheese-today-sell"></span></p>
+                        <p class="card-text">시즌1 : <span id="season1-today-sell"></span></p>
+                        <p class="card-text">시즌2 : <span id="season2-today-sell"></span></p>
                     </div>
                 </div>
                 <div class="card border-success mb-3" style="width: 18rem;">
                     <div class="card-header">남은재고</div>
                     <div class="card-body text-primary">
-                        <p class="card-text">치즈 : <span></span></p>
-                        <p class="card-text">시즌1 : <span></span></p>
-                        <p class="card-text">시즌2 : <span></span></p>
+                        <p class="card-text">치즈 : <span id="cheese-left-result"></span></p>
+                        <p class="card-text">시즌1 : <span id="season1-left-result"></span></p>
+                        <p class="card-text">시즌2 : <span id="season2-left-result"></span></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -102,5 +105,76 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
             crossorigin="anonymous"></script>
+
+    <script>
+
+        document.getElementById("calculate-btn").addEventListener("click", function(event) {
+            event.preventDefault();
+            handleClick();
+        }, false);
+
+        let handleClick = () => {
+            let cheese = calculate(false, 0);
+            let season1 = calculate(true, 1);
+            let season2 = calculate(true,2);
+
+            console.log(cheese);
+            console.log(season1);
+            console.log(season2);
+
+        }
+
+        let calculate = (season, i) => {
+            let menu = "";
+            if(season){
+                menu = "season" + i;
+            } else {
+                menu = "cheese"
+            }
+            let yesterday = parseInt(document.getElementById(menu + "-yesterday").value);
+            let receiving = parseInt(document.getElementById(menu + "-receiving-box").value);
+            let leftBox = parseInt(document.getElementById(menu + "-left-box").value);
+            let leftPan = parseInt(document.getElementById(menu + "-left-pan").value);
+            let leftPiece = parseInt(document.getElementById(menu + "-left-piece").value);
+
+            if(season){
+                return calculateSeason(yesterday, receiving, leftBox, leftPan, leftPiece);
+            } else {
+                return calculateCheese(yesterday, receiving, leftBox, leftPan, leftPiece);
+            }
+        }
+
+        let calculateCheese = (yesterday, receiving, leftBox, leftPan, leftPiece) => {
+            // 입고
+            let r1 = receiving * 4;
+            // 남은재고
+            let r3 = (leftBox * 4) + leftPan + (leftPiece > 0 ? 0.5 : 0);
+            // 당일생산
+            let r2 = (yesterday + r1) - r3;
+            console.log(r2);
+            console.log(r3);
+            return {
+                receiving : r1,
+                todaySell : r2,
+                left : r3,
+            };
+        }
+
+        let calculateSeason = (yesterday, receiving, leftBox, leftPan, leftPiece) => {
+            // 입고
+            let r1 = receiving * 4 * 36;
+            // 남은재고
+            let r3 = (leftBox * 4 * 36) + (leftPan * 36) + leftPiece;
+            // 당일생산
+            let r2 = (yesterday + r1) - r3;
+
+            return {
+                receiving : r1,
+                todaySell : r2,
+                left : r3,
+            };
+        }
+
+    </script>
 </body>
 </html>
